# custom-knowledge-base

./: .dockerignore  .env.example  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
indexing/: indexer.py  ingest.py  loader.py  parser.py
rag_pipeline/: connector.py  pipeline.py  query_engine.py  retriever.py
ui/: app.py
weaviate/: docker-compose.yml
